Sat, 28 Apr 2007 11:10:18 +0200 <thp@perli.net>
        * TODO: Updated TODO list

Sat, 21 Apr 2007 21:23:08 +0200 <thp@perli.net>
        * src/gpodder/gpodder.py: Add support for saving podcast episodes
          to files (in episode information dialog)
        * data/gpodder.glade: Support for saving podcast episodes to files

Sat, 21 Apr 2007 13:10:35 +0200 <thp@perli.net>
        ! Support for "only sync not-yet-played episodes", written by Nick
          <nikosapi gmail.com>
        * src/gpodder/libpodcasts.py: Add is_played() function to channel
        * src/gpodder/libgpodder.py: Add only_sync_not_played config option
        * src/gpodder/libipodsync.py: Add support for syncing only not yet 
          played episodes; set video podcast flags correctly (fix by Nick)
        * src/gpodder/gpodder.py: Add support for sync only unpladed episodes
        * data/gpodder.glade: Add check box to preferences dialog for above
        * bin/gpodder. Pushed version + release date

Wed, 11 Apr 2007 19:18:50 +0200 <thp@perli.net>
        * TODO: Updated TODO list

Mon,  9 Apr 2007 21:31:34 +0200 <thp@perli.net>
        ! BitTorrent support (mostly done by Nick <nikosapi gmail.com>) and
          per-episode download bandwidth throttling (as suggested by Paul 
          Elliot <omahns.home gmail.com>)
        * src/gpodder/libwget.py: Support the --limit-rate option of wget to
          enable per-download bandwidth throttling for slow connections
        * src/gpodder/libpodcasts.py: Support torrent files, add new method
          get_torrent_filename() by Nick (nikosapi gmail.com) that extracts
          the "real" filename from torrent files
        * src/gpodder/libgpodder.py: Add support for torrents and for download
          rate limiting; add get_float_from_parser() and invoke_torrent(); 
          BitTorrent support needs gnome-btdownload
        * src/gpodder/gpodder.py: Add support for torrents and rate limiting