@@ -1,3 +1,14 @@
+Tue,  1 May 2007 21:58:58 +0200 <thp@perli.net>
+        * src/gpodder/libwget.py: Implement support for download queue using
+          a semaphore in the downloadStatusManager class
+        * src/gpodder/libgpodder.py: Configuration options "max_downloads"
+          and "max_downloads_enabled" for the download queue
+        * src/gpodder/gpodder.py: Add support for configuration of the
+          download queue code (gPodderProperties dialog)
+        * data/gpodder.glade: Add checkbox + spinbutton for download queue
+        * TODO: Updated TODO list (download queue done)
+        * bin/gpodder: Pushed version + release date
+
 Sat, 28 Apr 2007 11:10:18 +0200 <thp@perli.net>
         * TODO: Updated TODO list
 
